--- a/react-client/src/Styles/style.css
+++ b/react-client/src/Styles/style.css
@@ -353,9 +353,9 @@
     z-index: 10;
     overflow:hidden;
     width:40%;
-    height: 60%;
+    height: 300px;
     margin:1% auto;
-    margin-top: 8%;
+    margin-top: -5%;
     border-radius: 3%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
@@ -375,7 +375,7 @@
 
   .slide-img{
     width: 40%;
-    height: 90%;
+    height: 100%;
   }
   
   @media screen and (max-width: 767px) {#slider {overflow: hidden; width: 100%; margin: 0 auto;}}
@@ -402,6 +402,13 @@
     margin-bottom: 10%;
     margin-top : -3%;
     
+  }
+
+  .register-container{
+
+    position: relative;
+    margin-top: 30px;
+
   }
 
   .register-form input[type=text],  input[type=password]{
