--- a/react-client/src/Styles/style.css
+++ b/react-client/src/Styles/style.css
@@ -13,7 +13,7 @@
 
 .site-header {
   background-color: white;
-  height: 6%;
+  height: 7%;
   margin-top : 0%;
   padding-left : 8%;
 }
@@ -95,10 +95,10 @@
   .rectangle {
     display: inline-block;
     z-index: 1000;
-    height: 15%;
+    height: 20%;
     width: 0.7%;
     background:rgb(137, 210, 210);
-    top : 43%;
+    top : 80%;
     left : 71.85%;
     position: absolute;
   }
@@ -106,10 +106,10 @@
   .rectangle-2 {
     display: inline-block;
     z-index: 1000;
-    height: 15%;
+    height: 20%;
     width: 10%;
     background : rgb(108, 197, 201);
-    top : 43%;
+    top : 80%;
     left : 62%;
     position: absolute;
   }
@@ -117,10 +117,10 @@
   .rectangle-3 {
     display: inline-block;
     z-index: 900;
-    height: 15%;
+    height: 20%;
     width: 4%;
     background : rgb(130, 218, 222);
-    top : 43%;
+    top : 80%;
     left : 61%;
     position: absolute;
   }
@@ -128,10 +128,10 @@
 
   #parallelogram-2 {
     width: 10.5%;
-    height: 14.8%;
+    height: 19.8%;
     transform: skew(-30deg);
     background: rgb(108, 197, 201);
-    top : 43%;
+    top : 80%;
     left : 60.5%;
     position: absolute;
     z-index: 900;
@@ -139,10 +139,10 @@
 
   #parallelogram-1 {
     width: 10.9%;
-    height: 14.8%;
+    height: 19.8%;
     transform: skew(-30deg);
     background: rgb(130, 218, 222);
-    top : 43%;
+    top : 80%;
     left : 59.6%;
     position: absolute;
   }
@@ -158,9 +158,9 @@
 
 .profile-photo
   {
-    height : 80%; 
+    height : 140%; 
     width : 15%; 
-    top : 15%;
+    top : 38%;
     left : 71.9%;
     z-index : 12;
     border-radius: 11%;
@@ -178,7 +178,7 @@
 
   .profile-name
   {
-    top : 43.5%;
+    top : 70%;
     right : 29.5%;
     padding-top: 2%;
     display: inline-block;
@@ -190,7 +190,7 @@
 
   .profile-job
   {
-    top : 77%;
+    top : 130%;
     right : 29.5%;
     z-index: 10;
     font-family: Vazir;
@@ -239,7 +239,8 @@
     margin-bottom : 7%;
   }
   .skills button{
-    padding : 1%;
+    padding : 0.5%;
+    margin-right: 0.5%;
   }
 
   .skills button:hover{
@@ -279,7 +280,7 @@
   .add-skill-form-container .add-skill-form .add-skill-input{
     background: #f9f9f9;
     border : 1px solid #eeeeee;
-    width : 68%;
+    width : 70%;
     padding : 3px;
     text-align: right;
     direction : rtl;
@@ -296,6 +297,7 @@
     width: 30%;
     height : 40px;
     padding: 3px;
+    padding-top: 5px;
   }
 
   .login-button{
@@ -323,8 +325,9 @@
     background-color: rgb(246, 246, 246);
     padding-right: 13%;
     padding-left: 13%;
-    padding-top: 2%;
+    padding-top: 10%;
     margin-bottom: 0%;
+    
   }
 
   .row-100{
