--- a/react-client/src/Styles/style.css
+++ b/react-client/src/Styles/style.css
@@ -6,7 +6,6 @@ html{
  height : 100%;
 }
 
-
 body, #root{
   width: 100%;
   position: relative;
@@ -24,6 +23,10 @@ body, #root{
   height: 100%;
   width: 100%;
   background-color: rgb(246, 246, 246);
+}
+
+.loading {
+  font-family: Vazir;
 }
 .container-fluid {
   height: 100%;
@@ -99,6 +102,9 @@ body, #root{
   right: 0;
   bottom: 0;
   left: 0;
+  clear : both;
+  position : relative;
+  margin-top: -65px;
 }
 
   .main {
@@ -110,8 +116,9 @@ body, #root{
     background-color: rgb(246, 246,246);
     overflow-y : scroll;
     overflow-x : hidden;   
-
     margin: 0 auto;
+    overflow:auto;
+    padding-bottom:65px;
   }
 
   .spacer { height: 65px; }
@@ -124,7 +131,7 @@ body, #root{
   
   .rectangle {
     display: inline-block;
-    z-index: 1000;
+    z-index: 20;
     height: 20%;
     width: 0.7%;
     background:rgb(137, 210, 210);
@@ -135,7 +142,7 @@ body, #root{
 
   .rectangle-2 {
     display: inline-block;
-    z-index: 1000;
+    z-index: 20;
     height: 20%;
     width: 10%;
     background : rgb(108, 197, 201);
@@ -146,7 +153,7 @@ body, #root{
 
   .rectangle-3 {
     display: inline-block;
-    z-index: 900;
+    z-index: 15;
     height: 20%;
     width: 4%;
     background : rgb(130, 218, 222);
@@ -164,7 +171,7 @@ body, #root{
     top : 80%;
     left : 60.5%;
     position: absolute;
-    z-index: 900;
+    z-index: 15;
   }
 
   #parallelogram-1 {
