--- a/react-client/src/Styles/style.css
+++ b/react-client/src/Styles/style.css
@@ -37,6 +37,7 @@ body, #root{
   font-family: Vazir;
 }
 .container-fluid {
+  overflow-x : hidden;
 }
 
 .site-header {
@@ -295,7 +296,6 @@ body, #root{
     float: right;
     position : relative;
     right : 0%;
-
   }
 
   #skill-row{
@@ -347,6 +347,7 @@ body, #root{
     padding-left: 13%;
     padding-top: 10%;
     margin-bottom: 0%;
+    overflow-x: hidden;
   }
 
   @media only screen and (max-width: 780px) {
@@ -672,21 +673,123 @@ body, #root{
   font-family: Vazir-Bold;
   text-align: right;
   color : rgb(22, 106, 108);
-  font-size: 150%;
+  font-size: 180%;
   right : 10%;
   position : relative;
+  padding-top : 2%;
 }
 
 #home-subheader{
   font-family: Vazir;
   position : relative;
-  right : 12%;
+  right : 11%;
   text-align: right;
   font-size : 80%;
 }
 
 .search-container{
-  float: center;
-  position: relative;
-  left : 50%;
+  padding: 3px;
+  margin-bottom: 1rem;
+  background-color: rgb(216, 248, 249);
+  border-radius: 3px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-bottom: 2.5px solid rgb(27, 174, 190);
+  width: 50%;
+  float: right;
+  position : relative;
+  right : 25%;
+  
 }
+.search-container input{
+  font-family: Vazir;
+  color : rgb(104, 168, 170);
+  text-align: right;
+  height : 40px;
+  border : 1px solid rgb(216, 248, 249);;
+  width : 85%;
+  padding : 3px;
+  background-color : rgb(216, 248, 249);
+}
+
+.search-container button{
+  background-color: rgb(23, 153, 164);
+  font-family: Vazir;
+  font-size: 110%;
+  border-radius: 4px;
+  width: 15%;
+  height : 40px;
+  padding: 3px;
+  padding-top: 5px;
+  color : white;
+}
+
+.search-container button:hover{
+  background-color: rgb(0, 204, 204);
+}
+
+
+.search-container-user{
+  padding: 3px;
+  margin-bottom: 1rem;
+  background-color: rgb(249, 249, 249);
+  border-radius: 3px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  width: 20%;
+  float: right;
+  position : relative;
+  left : 73%;
+  margin-top: -25px;
+  z-index: 2;
+  
+}
+.search-container-user input{
+  font-family: Vazir;
+  color : rgb(104, 168, 170);
+  text-align: right;
+  height : 40px;
+  border : 1px solid white;
+  width : 100%;
+  padding : 3px;
+  background-color : rgb(249, 249, 249);
+}
+
+.search-user{
+  padding: 3px;
+  margin-bottom: 1rem;
+  background-color: rgb(249, 249, 249);
+  border-radius: 3px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
+  width: 20%;
+  float: right;
+  position : relative;
+  left : 73%;
+  top : -20%;
+  height : 60px;
+  padding-top : 0.5%;
+  padding-bottom: 0.2%;
+}
+
+.search-user .search-image{
+  height : 50px;
+  width : 50px;
+  border-radius: 8%;
+  float : right;
+  margin-left: 10%;
+}
+
+.search-user .search-user-name{
+ padding : 2%;
+  margin-right: 5%;
+  font-family: Vazir;
+  font-size : 100%;
+  text-align: right;
+}
+
+.search-user .search-user-job{
+  font-family: Vazir;
+  font-size : 80%;
+  text-align: right;
+  margin-top : -8%;
+  color : rgb(124, 124, 124);
+}
+
