--- a/react-client/src/Styles/style.css
+++ b/react-client/src/Styles/style.css
@@ -698,7 +698,6 @@ body, #root{
   float: right;
   position : relative;
   right : 25%;
-  
 }
 .search-container input{
   font-family: Vazir;
@@ -735,18 +734,17 @@ body, #root{
   border-radius: 3px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   width: 20%;
-  float: right;
   position : relative;
   left : 73%;
   margin-top: -25px;
-  z-index: 2;
-  
+  z-index: 2; 
+  height : 40px;
 }
 .search-container-user input{
   font-family: Vazir;
   color : rgb(104, 168, 170);
   text-align: right;
-  height : 40px;
+  height : 100%;
   border : 1px solid white;
   width : 100%;
   padding : 3px;
@@ -755,7 +753,7 @@ body, #root{
 
 .search-user{
   padding: 3px;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
   background-color: rgb(249, 249, 249);
   border-radius: 3px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
@@ -766,7 +764,7 @@ body, #root{
   top : -20%;
   height : 60px;
   padding-top : 0.5%;
-  padding-bottom: 0.2%;
+  padding-bottom: 0.1%;
 }
 
 .search-user .search-image{
@@ -775,6 +773,7 @@ body, #root{
   border-radius: 8%;
   float : right;
   margin-left: 10%;
+  margin-right : -2%;
 }
 
 .search-user .search-user-name{
@@ -791,5 +790,16 @@ body, #root{
   text-align: right;
   margin-top : -8%;
   color : rgb(124, 124, 124);
+}
+
+@media only screen and (max-width: 780px) {
+  .search-user {
+    width  : 24%;
+    margin-left: -5%;
+  }
+  .search-container-user{
+    width  : 24%;
+    margin-left: -5%;
+  }
 }
 
