--- a/react-client/src/Styles/OtherUser.css
+++ b/react-client/src/Styles/OtherUser.css
@@ -1,3 +1,10 @@
+.badge{
+  padding : 5px;
+  padding-right: 7px;
+  padding-left : 7px;
+  margin-left: 3px;
+}
+
 .skill-btn1{
     background-color: white;
   }
@@ -5,7 +12,7 @@
   .badge-blue1{
     background-color: rgb(187,239,241);
     color : rgb(22, 106, 108);
-    text-align: center;    
+    text-align: center;  
   }
 
   .badge-green1{
