--- a/react-client/src/Styles/style.css
+++ b/react-client/src/Styles/style.css
@@ -835,9 +835,9 @@ input[type="password"] {
   background-color: rgb(249, 249, 249);
   border-radius: 3px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  width: 20%;
+  width: 80%;
   position: relative;
-  left: 73%;
+  left: -10%;
   margin-top: -25px;
   z-index: 2;
   height: 40px;
@@ -859,10 +859,10 @@ input[type="password"] {
   background-color: rgb(249, 249, 249);
   border-radius: 3px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
-  width: 20%;
+  width:  80%;
   float: right;
   position: relative;
-  left: 73%;
+  left: -10%;
   top: -20%;
   height: 60px;
   padding-top: 0.5%;
@@ -899,13 +899,14 @@ input[type="password"] {
   text-decoration: none;
 }
 
-@media only screen and (max-width: 780px) {
-  .search-user {
-    width: 24%;
-    margin-left: -5%;
-  }
-  .search-container-user {
-    width: 24%;
-    margin-left: -5%;
-  }
+
+
+#projects{
+  margin-left: 5%;
+  width : 130%;
+  margin-top: -25px;
+}
+
+#projects a{
+  text-decoration: none;
 }
